--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.021
+version=0.001
 
 name=App-LTSVUtils
 
@@ -30,7 +30,6 @@ read_env=0
 :version=0.598
 
 [Prereqs / TestRequires]
-App::CSVUtils=0.019
 File::Slurper=0
 File::Temp=0
 Test::Exception=0
@@ -40,6 +39,7 @@ Test::More=0.98
 perl=5.010001
 strict=0
 warnings=0
+Text::CSV_XS=0
 
 [Prereqs / DevelopX_spec]
 -phase=develop
